Update and rename 2024-10-18-tEoSD.md to 2024-10-18-EoSD.md

--- a/_posts/2024-10-18-EoSD.md
+++ b/_posts/2024-10-18-EoSD.md
@@ -3,7 +3,7 @@ title: 紅魔郷Lunatic打開の助け
 tags:
  - ゲーム
  - 東方Project
-date: 2024/10/18
+date: 2024/10/19
 ---
 
 つい最近、紅魔郷Lunatic打開を達成したのでその時のパターンや注意点などをここに残しておきます。打開時の参考になれば幸いです。
@@ -19,18 +19,16 @@ date: 2024/10/18
 # システム面について
 まずは紅魔郷のシステム面から解説します。<br><br>
 
-今作は自機の当たり判定の表示がなく、エネミーマーカー（ボスの下にでる印）もありません。そして一部の弾の当たり判定が他作品に比べて大きいです。
-
 > [東方紅魔郷/当たり判定一覧 - 東方Project攻略 Wiki*](https://wikiwiki.jp/thk/%E7%B4%85/%E5%88%A4%E5%AE%9A)
 
-特に気をつけなければないらないのは、大弾、中弾、ナイフ弾です。これらの弾は避けられそうだと思っても当たってしまうことがあるので、**避けられそうだと思ってもボムを撃つ**ことを心がけましょう。
-「ボムが少ないから後々苦労するかも...」と思うかもしれませんが、この作品は運要素が結構強いです。最後まで諦めず上振れを狙い続けるのも大切です。頑張って避けるのはボムが尽きてからにしましょう（どうせすぐ尽きるんだし）。
-### 抱え落ちは絶対にやめましょう。
+今作は一部の弾の当たり判定が他作品に比べて大きいです。特に気をつけなければないらないのは、大弾、中弾、ナイフ弾です。これらの弾は避けられそうだと思っても当たってしまうことがあるので、**避けられそうだと思ってもボムを撃つ**ことを心がけましょう。
+「ボムが少ないから後々苦労するかも...」と思うかもしれませんが、この作品は運要素が結構強いです。最後まで諦めず上振れを狙い続けるのも大切です。頑張って避けるのはボムが尽きてからにしましょう（~~どうせすぐ尽きるんだし~~）。
+## 抱え落ちは絶対にやめましょう。
 （まあ私も初クリアしたときは１ボム抱えましたが...）<br>
-内部ランクの存在[^1]ですが、今作は内部ランクによる難易度の変動を受ける弾幕が多いです。特に4面が内部ランクによってはかなりきつくなります。
+内部ランク[^1]の存在ですが、今作は内部ランクによる難易度の変動を受ける弾幕が多いです。特に4面は内部ランクによってはかなりきつくなります。
 <br><br>
 
-次にエクステンドについてですが、紅魔郷の大きな特徴としてエクステンド回数がとても少ないということが挙げられます。
+次にエクステンドについてですが、紅魔郷の大きな特徴としてエクステンド回数が少ないということが挙げられます。
 
 > [エクステンド - ネ実東方まとめ Wiki*](https://wikiwiki.jp/ogametoho/%E3%82%A8%E3%82%AF%E3%82%B9%E3%83%86%E3%83%B3%E3%83%89)
 
@@ -44,7 +42,10 @@ date: 2024/10/18
 > [東方紅魔郷/機体性能 - 東方Project攻略 Wiki*](https://wikiwiki.jp/thk/%E7%B4%85/Player)
 
 今作の機体で目立って弱いものはありませんが、クリア目的なのであればショットの火力が高く攻撃範囲もそこそこの霊夢Bがおすすめす。
-ボムは弱いですが、無敵時間を利用した密着撃ちをすれば火力はそれなりに出ます（ボムの無敵の短さには目を瞑ります）。また先ほど書いたように、今作は全体を通して撃てるボムの数が少ないのでそこも相性がいいんじゃないかと思います。
+ボムは弱いですが、無敵時間を利用した密着撃ちをすれば火力はそれなりに出ます（ボムの無敵の短さには目を瞑ります）。また先ほど書いたように、今作は全体を通して撃てるボムの数が少ないのでそこも相性がいいんじゃないかと思います。少し長くなりましたが、システム面についての解説は以上になります。
 <br><br>
 
 [^1]: 内部ランク: プレイしていれば上がっていく。ミスをするボムを撃つと下がる。
+
+
+# 1面
