--- a/_posts/2025-10-21-touhou0.md
+++ b/_posts/2025-10-21-touhou0.md
@@ -6,14 +6,14 @@ tags:
   - ゲーム
 ---
 
-Lunatic8作品打開したのでそれぞれの作品について思ったことを色々と書き残しておく。
+Lunatic8作品打開したのでそれぞれの作品について思ったことを色々と書き留めておく。
 
 # 紅魔郷（霊夢B）
 残機とボムの少なさが辛かった。気合よけが苦手なのもあって非常に苦労した。~~5面ボスのドヤ顔やめろ~~
 
 # 妖々夢（咲夜B）
 よく咲夜Aが強いと言われるが、私は咲夜Bのほうが強いと思う。咲夜Aは森羅結界の回転率悪すぎる。
-やっぱ、固有システムを上手く使いこなしたほうが強いんだなあ、と。（咲夜Aは避けに集中できる機体なのが強みらし、私が気合よけ苦手だから相性が悪いだけかも）<br>
+やっぱ、固有システムを上手く使いこなしたほうが強いんだなあ、と。（咲夜Aは避けに集中できる機体なのが強みだし、私が気合よけ苦手だから相性が悪いだけかも）<br>
 ラストスペルの反魂蝶はBGMと演出が最高。
 
 # 永夜抄 FinalA（詠唱組）
@@ -22,32 +22,32 @@ Lunatic8作品打開したのでそれぞれの作品について思ったこと
 
 # 風神録（霊夢A）
 人によって評価がかなり変わる作品らしい。
-~~これも全て守谷のせい~~<br>
 はやり霊撃、霊撃は全てを解決する...！（神徳は除く）
-風神録が難しいと言っている気合よけシューターは騙されたと思って霊夢Aを使ってみてほしい。
+クリア機体として霊夢Bがよく挙げられるが、今作の誘導は正面火力がそこそこあるのと、霊撃がバカなので個人的にはこちらのほうがおすすめ。
 
 # 輝針城（咲夜A）
-咲夜Aが強すぎる。神機体。
+咲夜Aが強すぎる。神機体。<br>
 正邪が曲者
 
 # 天空璋（チルノ・夏）
-あふれる残機、ボム、そして季節開放。ラスペ対策ゲー（3機ほどあれば安心）
+あふれる残機とボム、そして季節開放。<br>
+ラスペ対策ゲー（3機ほどあれば安心）。
 
 # 鬼形獣（妖夢・カワウソ霊）
 妖夢が強すぎる...。化け物だよアイツ<br>
-妖夢は道中では強いけどボス戦だと地獄、ボム撃ちまくるのが無難。
-1,2面が結構キツい。
+ただ、道中では強いけどボス戦は地獄。ボムを撃ちまくるのが無難。
+1,2面が結構ただただ苦行。
 ラスペとその1つ前のスペルは消化試合。雑に暴走ロワリングを回してゴリ押し。
 
 # 虹龍洞（早苗）
-初期装備は、法力経典・やんごとなき威光・ヴァンパイアファング<br>
+初期装備は、「法力経典」「やんごとなき威光」「ヴァンパイアファング」<br>
 強カードで暴れまわるのが楽しい。カード前提の難易度なのか、まともによけようと思うと地獄。
 1面中ボスから殺意が高く、道中の敵はやたら固いし、4面ボスのスペルにはボム耐性がある。
 6面ボスの通常はそれなりに難しいが、スペルが全部パターンで攻略できる。
-初期装備を3枚にするにはアナザーエンドをクリアする必要がある。~~最っ高に使えないアビリティカードね~~
+初期装備を3枚にするにはアナザーエンドをクリアする必要がある。
 
 # まとめ
-難しかった順に並べると次のようになる。<br><br>
+難しかった順に並べると次のようになる。<br>
 
 **↑難**
 
