--- a/_posts/2025-03-11-bibouroku0.md
+++ b/_posts/2025-03-11-bibouroku0.md
@@ -1,7 +1,11 @@
-# キャプチャーボードの音飛び解決方法
-<tag>備忘録</tag><tag>ハードウェア</tag>
-<br>
-<br>
+---
+title: キャプチャーボードの音飛び解決方法
+tags: 
+    - 備忘録
+    - ハードウェア
+date: 2025-03-11
+description: キャプチャーボードで録画をしたところ音飛びが発生した。その解決策。
+---
 
 ## 使用していたキャプチャーボード
 [RACEN ゲーミングビデオキャプチャ［CRC-GVCAP03］](https://amzn.asia/d/cyl4fxp)
