--- a/_posts/2025-10-21-touhou0.md
+++ b/_posts/2025-10-21-touhou0.md
@@ -4,9 +4,8 @@ date: 2024-10-21
 tags: 
   - 東方Project
   - ゲーム
+description: Lunatic8作品打開したのでそれぞれの作品について思ったことを色々と書き留めておく。
 ---
-
-Lunatic8作品打開したのでそれぞれの作品について思ったことを色々と書き留めておく。
 
 # 紅魔郷（霊夢B）
 残機とボムの少なさが辛かった。気合よけが苦手なのもあって非常に苦労した。~~5面ボスのドヤ顔やめろ~~
